--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "myportfoliosite",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "13.1.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -36,3 +39,4 @@
     ]
   }
 }
+
